tests-integration/tests/snapshots/e2e__conflict__check_after.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "foreign.rs",
      "status": "conflict"
    },
    {
      "changed": false,
      "path": "ordinary.rs",
      "status": "clean"
    }
  ]
}
