tests-integration/tests/snapshots/e2e__conflict__format.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "foreign.rs",
      "status": "conflict"
    },
    {
      "changed": true,
      "path": "ordinary.rs",
      "status": "missing"
    }
  ]
}
