tests-integration/tests/snapshots/e2e__conflict__tree_after.snap
---
source: tests-integration/tests/e2e.rs
expression: tree_snapshot(root)
---
=== foreign.rs ===
# CONFIDENTIAL © SIEMENS 2025␊
␊
fn foreign_style() {}␊
=== licenserc.toml ===
[header]␊
keywords = ["confidential", "siemens"]␊
text = "Confidential © Siemens 2026"␊
␊
[files]␊
excludes = ["licenserc.toml"]␊
includes = ["**/*.rs"]␊
=== ordinary.rs ===
// Confidential © Siemens 2026␊
␊
// An ordinary leading comment.␊
␊
fn ordinary_comment() {}␊
